Fix layout bug

--- a/assets/search.scss
+++ b/assets/search.scss
@@ -28,7 +28,8 @@
     cursor: pointer;
     background-color: #ff9801;
     padding: 12px;
-    padding-bottom: 12px !important;
+    padding-bottom: 12px;
+    padding-top: 14.3px;
     border: none;
   }
 }
